[package]
name = "kindle2cbz"
description = "Simple tool for extracting images from kindle books in MOBI format to CBZ archives."
version = "0.1.0"
edition = "2021"
license = "MIT AND Apache-2.0"
repository = "https://github.com/shloop/kindle2cbz"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.16", features = ["derive"] }
mobi = "0.8.0"
zip = "2.1.6"
